adding db auth with jwt