@@ -1,18 +1,11 @@
 package com.shubham.SpringSecurity.controller;
 
+import com.shubham.SpringSecurity.model.Student;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.web.bind.annotation.*;
+
 import java.util.Arrays;
 import java.util.List;
-
-import com.shubham.SpringSecurity.model.Student;
-
-import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public class StudentController {
@@ -27,7 +20,7 @@ public class StudentController {
 
     @GetMapping("/api/students/{id}")
     public Student getStudent(@PathVariable int id) {
-        return STUDENTS.stream().filter(student -> new Integer(id).equals(new Integer(student.getId()))).findFirst()
+        return STUDENTS.stream().filter(student -> Integer.valueOf(id).equals(new Integer(student.getId()))).findFirst()
                 .orElseThrow(() -> new IllegalStateException("student " + id + " DNE"));
 
     }
